<resources>
    <string name="app_name">פתקים</string>
    <string name="choose_categories">בחירת קטגוריות</string>
    <string name="choose_categories_button">לבחירת הקטגוריות</string>
    <string name="credits">עידן שם טוב ורועי פביאן</string>
    <string name="start">למשחק</string>
    <string name="numOfWords">20</string>

    <string name="place">מקומות</string>
    <string name="movie">סרטים סדרות וספרים</string>
    <string name="company">חברות ואירגונים</string>
    <string name="object">חפצים ומושגים</string>
    <string name="culture_leaders">אנשי תרבות ובידור</string>
    <string name="sport">ספורט</string>
    <string name="nature">טבע</string>
    <string name="scientists">מדענים וממציאים</string>
    <string name="hamisiSalof">חמישי סלוף</string>

    <string name="player_1">קבוצה 1:</string>
    <string name="player_2">קבוצה 2:</string>
    <string name="start_timer">60</string>
    <string name="start_score">0</string>


    <string name="dagim">דגים</string>
    <string name="round_number">סיבוב מס: %1d</string>
    <string name="playing_team">תור של קבוצה מס: %1d</string>
    <string name="round1text">מותר:%n לתאר את מה שכתוב בכמה מילים שרוצים%n אסור:%n לומר מילים שכתובות על הפתק או מתחרזות בו  %n %n  התור הוא של קבוצה %1d</string>
    <string name="round2text">מותר:%n לתאר את מה שכתוב במילה אחת בלבד%n אסור:%n לומר יותר ממילה אחת או מילה שכתובה על הפתק או מתחרזת בו  %n %n  התור הוא של קבוצה %1d </string>
    <string name="round3text">מותר:%n לתאר את מה שכתוב בעזרת פנטומימה בלבד%n אסור:%n לדבר או לכתוב את המילה המופיעה  %n %n  התור הוא של קבוצה %1d</string>
    <string name="endGameText">הקבוצה המנצחת היא %n  קבוצה מספר: %1d</string>
    <string name="categories">בחירת קטגוריות</string>
    <string name="game_title">פתקים</string>
    <string name="num_of_cards_title">מספר פתקים:</string>
    <string name="timer_help">משך סיבוב:</string>
    <string name="start_playing">יאללה בא לי לשחק</string>
    <string name="level_one">שלב ראשון: תיאור</string>
    <string name="level_two">שלב שני: מילה</string>
    <string name="level_three">שלב שלישי: פנטומימה</string>
    <string name="game_over">המשחק נגמר</string>
    <string name="start_new_game">התחל משחק חדש</string>

    <string name="left_words_text">נותרו %1d מילים</string>
    <string name="leftWordsTextViewInt">0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="hide_words">הסתרת מילים</string>

</resources>