<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CategoriesMenu"
    android:background="#D7CCC8">

    <Button
        android:id="@+id/places"
        style="@style/button"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:text="@string/place"
        app:layout_constraintEnd_toStartOf="@id/movies"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/movies"
        style="@style/button"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="100dp"
        android:text="@string/movie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/companies"
        style="@style/button"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:text="@string/company"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toEndOf="@id/movies"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/objects"
        style="@style/button"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:text="@string/object"
        app:layout_constraintTop_toBottomOf="@id/places"
        app:layout_constraintEnd_toStartOf="@id/culture_leaders"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/culture_leaders"
        style="@style/button"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="40dp"
        android:text="@string/culture_leaders"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/movies" />

    <Button
        android:id="@+id/sports"
        style="@style/button"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:text="@string/sport"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/start"
        app:layout_constraintTop_toBottomOf="@+id/culture_leaders" />

    <Button
        android:id="@+id/nature"
        style="@style/button"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:text="@string/nature"
        app:layout_constraintEnd_toEndOf="@+id/start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/culture_leaders" />


    <Button
        android:id="@+id/scientists"
        style="@style/button"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="40dp"
        android:text="@string/scientists"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/culture_leaders"
        app:layout_constraintTop_toBottomOf="@id/companies" />

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#4FC3F7"
        android:clickable="true"
        android:onClick="start"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/culture_leaders"
        app:layout_constraintVertical_bias="0.658" />

    <ImageButton
        android:id="@+id/return_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/ic_home"
        android:onClick="returnButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>