<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".howMuchCards">

    <TextView
        android:id="@+id/timer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/time"
        app:layout_constraintVertical_bias="0.1"
        android:text="@string/timer_help"
        style="@style/Title"
        />

    <TextView
        android:id="@+id/words_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/time"
        app:layout_constraintBottom_toTopOf="@id/numOfWords"
        app:layout_constraintVertical_bias="0.1"
        android:text="@string/num_of_cards_title"
        style="@style/Title"
        />

    <TextView
        android:id="@+id/numOfWords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numOfWords"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@id/choose_categories"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/words_text" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_timer"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@id/words_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timer_text"
        />

    <Button
        android:id="@+id/plus_words"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:onClick="plusWords"
        android:text="@string/plus"
        app:backgroundTint="@null"
        style="@style/PlusMinusButton"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@id/choose_categories"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/numOfWords"
        app:layout_constraintTop_toBottomOf="@id/words_text"
        />

    <Button
        android:id="@+id/plus_time"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:onClick="plusTime"
        android:text="@string/plus"
        app:backgroundTint="@null"
        style="@style/PlusMinusButton"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@id/words_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/numOfWords"
        app:layout_constraintTop_toBottomOf="@id/timer_text"
        />

    <Button
        android:id="@+id/minus_words"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:onClick="minusWords"
        android:text="@string/minus"
        app:backgroundTint="@null"
        style="@style/PlusMinusButton"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@id/choose_categories"
        app:layout_constraintEnd_toStartOf="@+id/numOfWords"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/words_text"
        />

    <Button
        android:id="@+id/minus_time"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:onClick="minusTime"
        android:text="@string/minus"
        app:backgroundTint="@null"
        style="@style/PlusMinusButton"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@id/words_text"
        app:layout_constraintEnd_toStartOf="@+id/numOfWords"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timer_text"
        />

    <Button
        android:id="@+id/choose_categories"
        android:layout_width="350dp"
        android:layout_height="65dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:onClick="start"
        style="@style/PrimaryTextButton"
        android:text="@string/choose_categories_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.85"
        />


</androidx.constraintlayout.widget.ConstraintLayout>